# Anvil

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile1  README.md  index.html  input_config_optim.json  main_bo.py  mkdocs.yml  pyproject.toml  rough_meshes.dex  setup.py  sitemap.xml
.github/workflows/: CI.yaml
CFD/: dexof_config_getsetter.py  input_config.json  rough_mesh_8cores.dex
FEA/: cad_executor.py  cad_to_stl.py  input_config.json
FEA/seed_cad/: Myring_hull_spreadsheet.FCStd
anvil/: __init__.py  __main__.py  _logger.py  config.py
anvil/cad/: cad_asset.py
anvil/simulator/: abc.py
anvil/tests/: base_test.py  test_config.py  utils.py
anvil/tests/cad/: test_cad.py
anvil/tests/data/: datagen.json
artifacts/: cybertruckv1.stl  input_config_datagen.json  param_UUV_hull.FCStd  winged_design.FCStd
automization/: setup.py
automization/data/: param_UUV_hull.csv  winged_design.csv
automization/src/: __main__.py  cad2stl.py  dexof_config_getsetter.py  foam_runner.py  main.py  rough_mesh_8cores.dex
automization/src/UUVhull/: Allclean  log.blockMesh  log.decomposePar  log.simpleFoam  log.snappyHexMesh  log.surfaceFeatureExtract  problem_def.json
automization/src/ofTemplate/: Allrun
automization/src/stl_repo/: design.stl
automization/usr_input/: input_config.json  input_config_optim.json
cad_seed/: FEM_dry_vessel_circularEnd_Spreadsheet.FCStd  extended_Myring_hull_spreadsheet.FCStd
cfd/: dex_of.py  dexof_config_getsetter.py  input_config.json  rough_mesh_8cores.dex  smallest_design.stl
cfd/Seaharrier/: log.blockMesh  log.decomposePar  log.reconstructPar  log.reconstructParMesh  log.simpleFoam  log.snappyHexMesh  log.surfaceFeatureExtract  problem_def.json  rough_mesh_8cores.dex
cfd/Seaharrier/0.orig/: U
configs/uuv/: input_config_optim.json
docs/: index.md
experiments/simulation/: UAM_Shovel.stl  UAV_TIE4.stl  UAV_Tiltie.stl
future_works/FEA/: FEA_wip.py  input_config.json
limbo/data/: winged_design.csv
limbo/src/: __main__.py  cad2stl.py  dexof_config_getsetter.py  foam_runner.py  main.py  rough_mesh_8cores.dex
limbo/usr_input/: input_config.json  winged_design.FCStd
optimization/data/: param_UUV_hull.csv
optimization/src/: foam_runner.py  main.py  rough_mesh_8cores.dex  samplers.py
optimization/usr_input/: input_config_optim.json
search/: search_index.json
stl_repo/: fishiefish.stl
(+143 files in other folders)
